# wiki-py

./: .gitignore  Makefile  README.md  pyproject.toml
assets/: paths.jsonl  triplets.jsonl
scripts/: build_db_from_triplets.py  convert_dataset.py  export_dataset.py  filter_valid.py  generate_million.py  generate_paths.py  generate_tool_dataset.py  verify_tool_dataset.py
tests/: __init__.py  test_tool_dataset.py  test_wikikg.py
wikikg/: __init__.py  converter.py  datasets.py  entities.py  experta_facts.py  experta_rules.py  relations.py  schemas.py  storage.py  tool_dataset.py  tool_dataset_verify.py  torch_dataloader.py
